environments/ds-labs/ds-lab-1/services/pach-training-1-12/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ner-training-dashboard
  namespace: pach-training-1-12
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ner-training-dashboard
  template:
    metadata:
      labels:
        app: ner-training-dashboard
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
        - name: webserver
          image: eu.gcr.io/adarga-docker/ds-custom-entity-recogniser-dashboard:from_kustomize
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 2Gi
