environments/ds-labs/ds-lab-1/services/pach-training-1-12/pachd-internal-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: pachd-ilb
  namespace: pach-training-1-12
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    external-dns.alpha.kubernetes.io/hostname: pachd-training.ds-lab-1.datascience.adarga.dev
spec:
  ports:
    - port: 650
      targetPort: 650
      protocol: TCP
  type: LoadBalancer
  selector:
    app: pachd
