environments/ds-labs/ds-lab-1/services/pach-training-1-12/pachyderm-core.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: etcd
    suite: pachyderm
  name: etcd-headless
  namespace: pach-training-1-12
spec:
  clusterIP: None
  ports:
  - name: peer-port
    port: 2380
    targetPort: 0
  selector:
    app: etcd
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: etcd
    suite: pachyderm
  name: etcd
  namespace: pach-training-1-12
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etcd
      suite: pachyderm
  serviceName: etcd-headless
  template:
    metadata:
      labels:
        app: etcd
        suite: pachyderm
      name: etcd
      namespace: pach-training-1-12
    spec:
      containers:
      - args:
        - '"/usr/local/bin/etcd" "--listen-client-urls=http://0.0.0.0:2379" "--advertise-client-urls=http://0.0.0.0:2379"
          "--data-dir=/var/data/etcd" "--auto-compaction-retention=1" "--max-txn-ops=10000"
          "--max-request-bytes=52428800" "--quota-backend-bytes=8589934592" "--listen-peer-urls=http://0.0.0.0:2380"
          "--initial-cluster-token=pach-cluster" "--initial-advertise-peer-urls=http://${ETCD_NAME}.etcd-headless.${NAMESPACE}.svc.cluster.local:2380"
          "--initial-cluster=etcd-0=http://etcd-0.etcd-headless.${NAMESPACE}.svc.cluster.local:2380"'
        command:
        - /bin/sh
        - -c
        image: pachyderm/etcd:v3.3.5
        imagePullPolicy: IfNotPresent
        name: etcd
        ports:
        - containerPort: 2379
          name: client-port
        - containerPort: 2380
          name: peer-port
        resources:
          requests:
            cpu: "1"
            memory: 2G
        volumeMounts:
        - mountPath: /var/data/etcd
          name: etcd-storage
      imagePullSecrets: null
  volumeClaimTemplates:
  - metadata:
      annotations:
        volume.beta.kubernetes.io/storage-class: etcd-storage-class
      labels:
        app: etcd
        suite: pachyderm
      name: etcd-storage
      namespace: pach-training-1-12
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: etcd
    suite: pachyderm
  name: etcd
  namespace: pach-training-1-12
spec:
  ports:
  - name: client-port
    port: 2379
    targetPort: 0
  selector:
    app: etcd
  type: NodePort
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "656"
    prometheus.io/scrape: "true"
  creationTimestamp: null
  labels:
    app: pachd
    suite: pachyderm
  name: pachd
  namespace: pach-training-1-12
spec:
  ports:
  - name: api-grpc-port
    nodePort: 30650
    port: 650
    targetPort: 0
  - name: trace-port
    nodePort: 30651
    port: 651
    targetPort: 0
  - name: api-http-port
    nodePort: 30652
    port: 652
    targetPort: 0
  - name: saml-port
    nodePort: 30654
    port: 654
    targetPort: 0
  - name: oidc-port
    nodePort: 30657
    port: 657
    targetPort: 0
  - name: api-git-port
    nodePort: 30655
    port: 655
    targetPort: 0
  - name: s3gateway-port
    nodePort: 30600
    port: 600
    targetPort: 0
  - name: prom-metrics
    nodePort: 30656
    port: 656
    protocol: TCP
    targetPort: 656
  selector:
    app: pachd
  type: NodePort
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: pachd
    suite: pachyderm
  name: pachd-peer
  namespace: pach-training-1-12
spec:
  ports:
  - name: api-grpc-peer-port
    port: 30653
    targetPort: 653
  selector:
    app: pachd
  type: ClusterIP
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pachd
    suite: pachyderm
  name: pachd
  namespace: pach-training-1-12
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pachd
      suite: pachyderm
  strategy: {}
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: ds-lab-120201116115421529800000009
      creationTimestamp: null
      labels:
        app: pachd
        suite: pachyderm
      name: pachd
      namespace: pach-training-1-12
    spec:
      containers:
      - command:
        - /pachd
        image: pachyderm/pachd:1.13.0
        imagePullPolicy: IfNotPresent
        name: pachd
        ports:
        - containerPort: 650
          name: api-grpc-port
          protocol: TCP
        - containerPort: 651
          name: trace-port
        - containerPort: 652
          name: api-http-port
          protocol: TCP
        - containerPort: 653
          name: peer-port
          protocol: TCP
        - containerPort: 655
          name: api-git-port
          protocol: TCP
        - containerPort: 654
          name: saml-port
          protocol: TCP
        - containerPort: 657
          name: oidc-port
          protocol: TCP
        - containerPort: 656
          name: prom-metrics
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /pachd
            - --readiness
        resources:
          limits:
            cpu: "1"
            memory: 3G
          requests:
            cpu: "1"
            memory: 3G
        volumeMounts:
        - mountPath: /pach
          name: pach-disk
        - mountPath: /pachyderm-storage-secret
          name: pachyderm-storage-secret
      serviceAccountName: pachyderm
      volumes:
      - name: pach-disk
      - name: pachyderm-storage-secret
        secret:
          secretName: pachyderm-storage-secret
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: dash
    suite: pachyderm
  name: dash
  namespace: pach-training-1-12
spec:
  ports:
  - name: dash-http
    nodePort: 30080
    port: 8080
    targetPort: 0
  - name: grpc-proxy-http
    nodePort: 30081
    port: 8081
    targetPort: 0
  selector:
    app: dash
    suite: pachyderm
  type: NodePort
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: dash
    suite: pachyderm
  name: dash
  namespace: pach-training-1-12
spec:
  selector:
    matchLabels:
      app: dash
      suite: pachyderm
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dash
        suite: pachyderm
      name: dash
      namespace: pach-training-1-12
    spec:
      containers:
      - image: pachyderm/dash:0.5.57
        imagePullPolicy: IfNotPresent
        name: dash
        ports:
        - containerPort: 8080
          name: dash-http
        resources: {}
      - image: pachyderm/grpc-proxy:0.4.10
        imagePullPolicy: IfNotPresent
        name: grpc-proxy
        ports:
        - containerPort: 8081
          name: grpc-proxy-http
        resources: {}
status: {}
